@@ -5411,6 +5411,30 @@ SEXP R_igraph_lastcit_game(SEXP pnodes, SEXP pedges, SEXP pagebins,
   return result;
 }
 
+SEXP R_igraph_cited_type_game(SEXP pnodes, SEXP pedges, SEXP ptypes,
+			      SEXP ppref, SEXP pdirected) {
+  igraph_t g;
+  igraph_integer_t nodes=REAL(pnodes)[0];
+  igraph_integer_t edges=REAL(pedges)[0];
+  igraph_vector_t types, pref;
+  igraph_bool_t directed=LOGICAL(pdirected)[0];
+  SEXP result;
+  
+  R_igraph_before();
+  
+  R_SEXP_to_vector(ptypes, &types);
+  R_SEXP_to_vector(ppref, &pref);
+  igraph_cited_type_game(&g, nodes, &types, &pref, edges, directed);
+  PROTECT(result=R_igraph_to_SEXP(&g));
+  igraph_destroy(&g);
+  
+  R_igraph_after();
+  
+  UNPROTECT(1);
+  return result;
+}
+			      
+
 /***********************************************/
 /* THE REST IS GENERATED BY inger.py           */
 /***********************************************/
