@@ -1,5 +1,8 @@
 2007-03-14  Gabor Csardi  <csardi@rmki.kfki.hu>
 
+	* interfaces/R/igraph/R/games.R (cited.type.game) : added
+	* interfaces/R/src/rinterface.c (R_igraph_cited_type_game) : added
+
 	* interfaces/R/igraph/R/measure.dynamics.R (measure.dynamics.citedcat) :
 	added
 	* interfaces/R/src/rinterface.c (R_igraph_measure_dynamics_citedcat)
